--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2 id="text3">Cậu yêu tớ có phải không nào ._.</h2>
-          <h4 id="text4">
-            Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :v
-          </h4>
+          <h2 id="text3">Will you go on a date with me?</h2>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">
           Yes ^^
@@ -54,7 +51,7 @@
 
       </div>
       <div>
-        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=Q8UWmDoZc4U&t=5s">
+        <iframe width="420" height="315" src="https://www.youtube.com/watch?v=hhSw0-hRXwM">
         </iframe>
       </div>
     </div>
